--- a/src/python_depi/session_3/assignment_v1.ipynb
+++ b/src/python_depi/session_3/assignment_v1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,12 +29,20 @@
     }
    ],
    "source": [
-    "# Write your answer here\n",
-    "for i in range(1,6):\n",
-    "    if i==3:\n",
-    "        continue\n",
-    "    print(i)"
+    "# Remove an item from a set\n",
+    "my_set = {1, 2, 3, 4, 5}\n",
+    "item_to_remove = 3\n",
+    "\n",
+    "# Use discard to avoid KeyError if the item isn't found\n",
+    "my_set.discard(item_to_remove)\n",
+    "\n",
+    "print(my_set)  # {1, 2, 4, 5}\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,15 +72,14 @@
     }
    ],
    "source": [
-    "# Write your answer here\n",
-    "set = [1, 2, 3, 4, 5]\n",
-    "deleted_value = [1,4]\n",
-    "i= len(set)-1\n",
-    "while i>=0:\n",
-    "    if set[i] in deleted_value:\n",
-    "        set.remove(set[i])\n",
-    "    i=i-1\n",
-    "print(set)"
+    "# Remove multiple items from a set\n",
+    "my_set = {1, 2, 3, 4, 5}\n",
+    "items_to_remove = {1, 4}\n",
+    "\n",
+    "# Option 1: difference_update (in-place)\n",
+    "my_set.difference_update(items_to_remove)\n",
+    "\n",
+    "print(my_set)  # {2, 3, 5}\n"
    ]
   },
   {
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +108,14 @@
     }
    ],
    "source": [
-    "# Write your answer here\n",
-    "my_tuple = ('apple', 'banana', 'orange', 'grape' , 'banana')\n",
-    "print(my_tuple.index(\"orange\"))"
+    "# Find the index of an item in a tuple\n",
+    "my_tuple = ('apple', 'banana', 'orange', 'grape', 'banana')\n",
+    "item = 'orange'\n",
+    "\n",
+    "# tuple has index() method (returns first occurrence)\n",
+    "idx = my_tuple.index(item)\n",
+    "\n",
+    "print(f\"index of '{item}' is: {idx}\")\n"
    ]
   },
   {
